--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "latest",
     "axios": "^1.2.5",
     "file_size_url": "^1.0.4",
+    "hirunews-scrap": "^1.1.2",
+    "@sl-code-lords/esana-news": "latest",
     "fs-extra": "^11.1.0",
     "path": "^0.12.7",
     "node-fetch": "^2.6.1",
