--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@whiskeysockets/baileys": "6.6.0",
     "@adiwajshing/keyed-db": "^0.2.4",
     "pino": "^7.0.5",
+    "axios": "^1.2.5",
+    "cheerio": "^1.0.0-rc.12",
     "pm2": "^5.2.0",
     "util": "^0.12.4",
     "os":"0.1.2",
