--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pino": "^7.0.5",
     "api-dylux": "latest",
     "cheerio": "^1.0.0-rc.12",
+    "yt-search":"2.12.1",
     "@sl-code-lords/movie-api":"1.0.0",
     "pixaldrain-sinhalasub": "git+https://github.com/DarkMakerofc/pixaldrain-sinhalasub.git",
     "xnxx-dl": "^1.0.2",
