--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "latest",
     "axios": "^1.2.5",
     "file_size_url": "^1.0.4",
+    "fetch-json":"3.3.4",
     "hirunews-scrap": "^1.1.2",
     "@sl-code-lords/esana-news": "latest",
     "fs-extra": "^11.1.0",
